Terms and  conditions pages update

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!--~~~~~~~~~~~~~~~~~~~~~ ABOUT US SECTION ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
     <!--~~~~~~~~~~~~~~~~~~~~~ OUR PROCESSES SECTION ~~~~~~~~~~~~~~~~~~~~~-->
-    <section class="our-processes-section container flex">
+    <section id="processes" class="our-processes-section container flex">
         <h2 class="section-title">Nuestros Procesos</h2>
         <article class="our-processes-content flex justify-center align-center wrap">
             <div class="process-natural flex align-center justify-center"></div>
@@ -226,16 +226,16 @@
         <div class="footer-options-content flex justify-content-between wrap mx-auto">
             <div class="footer-options flex column justify-center">
                 <ul class="footer-list flex column">
-                    <li><a href="" target="_blank" class="footer-link grey-text century">Términos y Condiciones</a></li>
-                    <li><a href="" target="_blank" class="footer-link grey-text century">Devoluciones</a></li>
-                    <li><a href="" class="footer-link grey-text century">Conoce más</a></li>
+                    <li><a href="terms&conditions.html" target="_blank" class="footer-link grey-text century">Términos y Condiciones</a></li>
+                    <li><a href="returns.html" target="_blank" class="footer-link grey-text century">Devoluciones</a></li>
+                    <li><a href="#processes" class="footer-link grey-text century">Conoce más</a></li>
                 </ul>
             </div>
             <div class="footer-options flex column justify-center">
                 <ul class="footer-list flex column">
-                    <li><a href="" target="_blank" class="footer-link grey-text century">Políticas de Privacidad</a></li>
-                    <li><a href="" target="_blank" class="footer-link grey-text century">Escríbenos</a></li>
-                    <li><a href=""  class="footer-link grey-text century">Quiénes Somos</a></li>
+                    <li><a href="privacy_policies.html" target="_blank" class="footer-link grey-text century">Políticas de Privacidad</a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=50684581500&text=Hola%2C%20quiero%20más%20información" target="_blank" class="footer-link grey-text century">Escríbenos</a></li>
+                    <li><a href="#about_us"  class="footer-link grey-text century">Quiénes Somos</a></li>
                 </ul>
             </div>
         </div>
