--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     <li><a href="#contact_us" class="nav-link-local white-text century">Contacto</a></li>
                     <!-- NAV-LIST LIs AND NAV-LINKs -->
                     <!-- CTA NAVIGATION BUY NOW MOBILE -->
-                    <a href="https://api.whatsapp.com/send?phone=50684581500&text=Hola%2C%20quiero%20más%20información" class="btn-buy-now-mobile white-text century">Comprar Ahora</a>
+                    <a href="#products" class="btn-buy-now-mobile white-text century">Comprar Ahora</a>
                     <!-- CTA NAVIGATION BUY NOW MOBILE -->
                 </ul>
                 <!--======= NAV-LIST STRUCTURE =======-->
 
                 <!-- CTA NAVIGATION BUY NOW -->
-                <a href="https://api.whatsapp.com/send?phone=50684581500&text=Hola%2C%20quiero%20más%20información" class="btn-buy-now white-text">Comprar Ahora</a>
+                <a href="#products" class="btn-buy-now white-text">Comprar Ahora</a>
                 <!-- CTA NAVIGATION BUY NOW -->
             </div>
             <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! NAVIGATION STRUCTURE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
@@ -85,8 +85,8 @@
                 <p class="banner-description white-text century"> Ború no es solo una marca de café. Es una historia que se cultiva con las manos, el corazón y el alma de una familia campesina que vive por y para el café.</p>
             </div>
             <div class="banner-btns flex">
-                <a href="https://api.whatsapp.com/send?phone=50684581500&text=Hola%2C%20quiero%20más%20información" target="_blank" class="btn-buy-now-mobile white-text century">Comprar Ahora</a>
-                <a href="https://api.whatsapp.com/send?phone=50684581500&text=Hola%2C%20quiero%20más%20información" target="_blank" class="btn-buy-now white-text century">Comprar Ahora</a>
+                <a href="#products" target="_blank" class="btn-buy-now-mobile white-text century">Comprar Ahora</a>
+                <a href="#products" target="_blank" class="btn-buy-now white-text century">Comprar Ahora</a>
                 <a href="" class="btn-explore-more white-text century">Explorar Mas</a>
             </div>
         </div>
@@ -244,8 +244,8 @@
     <div class="under-footer flex">
         <div class="container flex justify-between wrap">
             <span class="grey-text flex align-center century">&copyBorú Café, CR</span>
-            <a href="#" target="_blank" class="footer-link grey-text century">Políticas de Privacidad</a>
-            <a href="#" target="_blank" class="footer-link grey-text century">Términos y Condiciones</a>
+            <a href="privacy_policies.html" target="_blank" class="footer-link grey-text century">Políticas de Privacidad</a>
+            <a href="terms&conditions.html" target="_blank" class="footer-link grey-text century">Términos y Condiciones</a>
         </div>
     </div>
 </footer>
