--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 <p class="banner-description white-text century"> Ború no es solo una marca de café. Es una historia que se cultiva con las manos, el corazón y el alma de una familia campesina que vive por y para el café.</p>
             </div>
             <div class="banner-btns flex">
-                <a href="#products" target="_blank" class="btn-buy-now-mobile white-text century">Comprar Ahora</a>
-                <a href="#products" target="_blank" class="btn-buy-now white-text century">Comprar Ahora</a>
+                <a href="#products" class="btn-buy-now-mobile white-text century">Comprar Ahora</a>
+                <a href="#products" class="btn-buy-now white-text century">Comprar Ahora</a>
                 <a href="" class="btn-explore-more white-text century">Explorar Mas</a>
             </div>
         </div>
